# clauditor

./: .clawdhubignore  AGENTS.md  ANOMALY_DETECTION_PLAN.md  CONTINUITY.md  Cargo.toml  EXEC_MONITOR_PLAN.md  LICENSE  LIGHTWEIGHT_DEFENSE_PLAN.md  PLAN.md  README.md  SKILL.md  dev-config.toml  test-fix.sh  test_fanotify_minimal.rs
crates/alerter/src/: lib.rs
crates/clauditor-cli/: Cargo.toml
crates/clauditor-cli/src/: main.rs
crates/collector/src/: lib.rs  privileged.rs
crates/detector/: Cargo.toml
crates/detector/src/: lib.rs  rules.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs
crates/writer/src/: lib.rs
dev-data/: key
docs/: FANOTIFY_FIX.md
src/detector/: Cargo.toml
src/detector/src/: lib.rs  rules.rs
src/digest/: Cargo.toml
src/digest/src/: main.rs
src/watcher/: Cargo.toml
src/watcher/src/: main.rs
wizard/: install.sh  wizard.sh
