[package]
name = "clauditor-digest"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sysmon-report"
path = "src/main.rs"

[dependencies]
clauditor-detector = { path = "../detector" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
