[package]
name = "clauditor-watcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "systemd-journaldd"
path = "src/main.rs"

[dependencies]
clauditor-detector = { path = "../detector" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
libc = "0.2"
nix = { version = "0.29", features = ["fs", "inotify"] }
